--- a/Code/PosControl/PosControl.vcxproj.filters
+++ b/Code/PosControl/PosControl.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="src\Transmitter_Mock.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="src\ManualController.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headerdateien">
