--- a/Code/BagPlotter/BagPlotter.vcxproj
+++ b/Code/BagPlotter/BagPlotter.vcxproj
@@ -90,11 +90,13 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>Default</LanguageStandard>
-      <AdditionalIncludeDirectories>./include;../ROS_Mock</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>./include;../ROS_Mock;../Domain/include;../DroneController/include;../Adapter/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>../Domain/Debug;../DroneController/Debug;../Application/Debug;../Adapter/Debug;../ROS_Mock/Debug;../parrot/Debug;../Controller/Debug;</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ros.obj;ros_Talker.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
