--- a/Code/Test_Application/Test_Application.vcxproj
+++ b/Code/Test_Application/Test_Application.vcxproj
@@ -34,9 +34,13 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClInclude Include="IMU_Mock.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PoseControlable_Mock.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="IMU_Mock.cpp" />
+    <ClCompile Include="PoseControlable_Mock.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
