--- a/Code/Test_Application/Test_Application.vcxproj.filters
+++ b/Code/Test_Application/Test_Application.vcxproj.filters
@@ -3,9 +3,13 @@
   <ItemGroup>
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp" />
+    <ClCompile Include="IMU_Mock.cpp" />
+    <ClCompile Include="PoseControlable_Mock.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="IMU_Mock.h" />
+    <ClInclude Include="PoseControlable_Mock.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
