added Mocks for DroneController-Testing

--- a/Code/Test_Application/Test_Application.vcxproj
+++ b/Code/Test_Application/Test_Application.vcxproj
@@ -36,10 +36,12 @@
   <ItemGroup>
     <ClInclude Include="IMU_Mock.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PoseBuildable_Mock.h" />
     <ClInclude Include="PoseControlable_Mock.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IMU_Mock.cpp" />
+    <ClCompile Include="PoseBuildable_Mock.cpp" />
     <ClCompile Include="PoseControlable_Mock.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="pch.cpp">
