--- a/Code/BagPlotter/BagPlotter.vcxproj
+++ b/Code/BagPlotter/BagPlotter.vcxproj
@@ -150,10 +150,12 @@
     <Xml Include="package.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="DataLoader.cpp" />
     <ClCompile Include="src\DataCollector.cpp" />
     <ClCompile Include="src\parrotPlotter.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DataLoader.h" />
     <ClInclude Include="include\BagPlotter\DataCollector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
