--- a/Code/DroneController/DroneController.vcxproj
+++ b/Code/DroneController/DroneController.vcxproj
@@ -146,6 +146,8 @@
     <ClCompile Include="DroneController.cpp" />
     <ClCompile Include="src\Batteryable.cpp" />
     <ClCompile Include="src\DroneControlable.cpp" />
+    <ClCompile Include="src\ImpactOK.cpp" />
+    <ClCompile Include="src\ImpactWatcher.cpp" />
     <ClCompile Include="src\IMUable.cpp" />
     <ClCompile Include="src\PercentageOK.cpp" />
     <ClCompile Include="src\PoseControlable.cpp" />
@@ -154,9 +156,13 @@
     <ClCompile Include="src\Rotor.cpp" />
     <ClCompile Include="src\Thrustable.cpp" />
     <ClCompile Include="src\Statusable.cpp" />
+    <ClCompile Include="src\TimeoutOK.cpp" />
     <ClCompile Include="src\VoltageOK.cpp" />
+    <ClCompile Include="src\Watchdog.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DroneController\ImpactOK.h" />
+    <ClInclude Include="include\DroneController\ImpactWatcher.h" />
     <ClInclude Include="include\DroneController\PercentageOK.h" />
     <ClInclude Include="include\DroneController\PoseControlable.h" />
     <ClInclude Include="include\DroneController\Batteryable.h" />
@@ -170,8 +176,10 @@
     <ClInclude Include="include\DroneController\Thrustable.h" />
     <ClInclude Include="include\DroneController\Statusable.h" />
     <ClInclude Include="include\DroneController\Timeable.h" />
+    <ClInclude Include="include\DroneController\TimeoutOK.h" />
     <ClInclude Include="include\DroneController\Transmitable.h" />
     <ClInclude Include="include\DroneController\VoltageOK.h" />
+    <ClInclude Include="include\DroneController\Watchdog.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
