--- a/Code/Test_PlugIn/Test_PlugIn.vcxproj
+++ b/Code/Test_PlugIn/Test_PlugIn.vcxproj
@@ -33,6 +33,9 @@
   <ImportGroup Label="Shared" />
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <RunCodeAnalysis>true</RunCodeAnalysis>
+  </PropertyGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
   </ItemGroup>
@@ -67,8 +70,8 @@
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <AdditionalLibraryDirectories>../gmock/Debug;../Domain/Debug;../DroneController/Debug;../Adapter/Debug;../parrot/Debug;../Controller/Debug;../PosControl/Debug;../ROS_Mock/Debug</AdditionalLibraryDirectories>
-      <AdditionalDependencies>gmock_lib.lib;Value.obj;TimedValue.obj;Vector3D.obj;Controllable.obj;Controller_Basic.obj;Controller_D.obj;Controller_I.obj;Controller_Input.obj;Controller_P.obj;Controller_PID.obj;Controller_PT.obj;ControllerSystem.obj;Input.obj;Integral1.obj;Integral2.obj;TimedDifference.obj;IMUState.obj;StateHandler.obj;termios.obj;ros_Talker.obj;ros.obj;Batteryable.obj;Statusable.obj;IMUable.obj;Pose.obj;PoseBuilder.obj;PoseControlable.obj;PoseController.obj;parrotBattery.obj;DroneControlable.obj;parrotControl.obj;parrotTransmitter.obj;parrotIMU.obj;parrotStatus.obj;SafetyProvider.obj;StateBuilder.obj;PercentageOK.obj;VoltageOK.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>../gmock/Debug;../Domain/Debug;../DroneController/Debug;../Adapter/Debug;../parrot/Debug;../Controller/Debug;../PosControl/Debug;../ROS_Mock/Debug;../BagPlotter/include</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Value.obj;TimedValue.obj;Vector3D.obj;Controllable.obj;Controller_Basic.obj;Controller_D.obj;Controller_I.obj;Controller_Input.obj;Controller_P.obj;Controller_PID.obj;Controller_PT.obj;ControllerSystem.obj;Input.obj;TimedDifference.obj;IMUState.obj;StateHandler.obj;termios.obj;ros_Talker.obj;ros.obj;Batteryable.obj;Statusable.obj;IMUable.obj;Pose.obj;PoseControlable.obj;PoseController.obj;parrotBattery.obj;DroneControlable.obj;parrotControl.obj;parrotTransmitter.obj;parrotIMU.obj;parrotStatus.obj;SafetyProvider.obj;StateBuilder.obj;Watchdog.obj;TimeoutOK.obj;PercentageOK.obj;VoltageOK.obj;ImpactOK.obj;Integral1.obj;Integral2.obj;MainClass.obj;PoseBuilder.obj;Transmitter_Mock.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
