made it finally work!
maybe use a state machine the next time :D
Testing with drone required!

--- a/Code/DroneController/DroneController.vcxproj
+++ b/Code/DroneController/DroneController.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="src\ImpactWatcher.cpp" />
     <ClCompile Include="src\IMUable.cpp" />
     <ClCompile Include="src\PercentageOK.cpp" />
+    <ClCompile Include="src\PoseBuildable.cpp" />
     <ClCompile Include="src\PoseControlable.cpp" />
     <ClCompile Include="src\IMUState.cpp" />
     <ClCompile Include="src\Pose.cpp" />
