wip Implementing global Time and renamed main()-Stuff

--- a/Code/DroneController/CMakeLists.txt
+++ b/Code/DroneController/CMakeLists.txt
@@ -49,6 +49,7 @@ add_library(DroneController_lib
 	src/Rotor.cpp
 	src/Statusable.cpp
 	src/Thrustable.cpp
+	src/Timeable.cpp
 	src/Watchdog.cpp
 	src/ImpactWatcher.cpp
 	src/ImpactOK.cpp
