Added some stuff for Timeable
epanded MaunalController. Later there shall be a quite easy controller loop for the height.
Another Test-Flight showed: The given Data from ultrasonic Sensor is not too accurate.
So maybe the calculated Data is correct?

--- a/Code/Adapter/Adapter.vcxproj
+++ b/Code/Adapter/Adapter.vcxproj
@@ -95,7 +95,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../Domain/Debug;../DroneController/Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Value.obj;TimedValue.obj;Vector3D.obj;SafetyProvider.obj;IMUable.obj;PoseControlable.obj;IMUState.obj;Pose.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Value.obj;TimedValue.obj;Vector3D.obj;SafetyProvider.obj;IMUable.obj;IMUState.obj;Pose.obj;PoseControlable.obj;Timeable.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
