--- a/Code/PosControl/PosControl.vcxproj
+++ b/Code/PosControl/PosControl.vcxproj
@@ -97,7 +97,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>../Domain/Debug;../DroneController/Debug;../Application/Debug;../Adapter/Debug;../ROS_Mock/Debug;../BagPlotter/Debug;../parrot/Debug;../Controller/Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>Value.obj;TimedValue.obj;Vector3D.obj;Controllable.obj;Controller_Basic.obj;Controller_D.obj;Controller_I.obj;Controller_Input.obj;Controller_P.obj;Controller_PID.obj;Controller_PT.obj;ControllerSystem.obj;Input.obj;TimedDifference.obj;IMUState.obj;StateHandler.obj;termios.obj;ros_Talker.obj;ros.obj;Batteryable.obj;Statusable.obj;IMUable.obj;Pose.obj;PoseBuildable.obj;PoseControlable.obj;PoseController.obj;parrotBattery.obj;DroneControlable.obj;parrotControl.obj;parrotTransmitter.obj;parrotIMU.obj;parrotStatus.obj;SafetyProvider.obj;StateBuilder.obj;Watchdog.obj;TimeoutOK.obj;PercentageOK.obj;VoltageOK.obj;ImpactOK.obj;DataCollector.obj;DataLoader.obj;DataPersister.obj;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>Value.obj;TimedValue.obj;Vector3D.obj;Controllable.obj;Controller_Basic.obj;Controller_D.obj;Controller_I.obj;Controller_Input.obj;Controller_P.obj;Controller_PID.obj;Controller_PT.obj;ControllerSystem.obj;Input.obj;TimedDifference.obj;IMUState.obj;StateHandler.obj;termios.obj;ros_Talker.obj;ros.obj;Batteryable.obj;Statusable.obj;IMUable.obj;Timeable.obj;Pose.obj;PoseBuildable.obj;PoseControlable.obj;PoseController.obj;parrotBattery.obj;DroneControlable.obj;parrotControl.obj;parrotTransmitter.obj;parrotIMU.obj;parrotStatus.obj;SafetyProvider.obj;StateBuilder.obj;Watchdog.obj;TimeoutOK.obj;PercentageOK.obj;VoltageOK.obj;ImpactOK.obj;DataCollector.obj;DataLoader.obj;DataPersister.obj;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -145,7 +145,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Simulant.cpp" />
+    <ClCompile Include="Simulant.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="src\AngleDetector.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
@@ -157,7 +159,7 @@
     </ClCompile>
     <ClCompile Include="src\PoseBuilder.cpp" />
     <ClCompile Include="src\Main.cpp">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="src\Transmitter_Mock.cpp" />
   </ItemGroup>
